# privmedrag

./: .gitignore  README.md  README_RGL.md  generate_primekg_embeddings.py  pyproject.toml
clibs/: build_linux.sh  retrieve.cpp
demo/: demo_abstract_generation.py  demo_graph_rag_abstract_generation.py  demo_primekg_entity_summary.py
evaluate/: README.md  config.py  convert_to_parquet.py  data_utils.py  evaluate_mcq_performance.py  generate_mcqs.py  question_generator.py  upload_to_hf.py
evaluate/output/: level0_evals.json  level1_evals.json  level2_evals.json
rgl/datasets/: __init__.py  primekg.py
rgl/graph_retrieval/: __init__.py  retrieve.py
utils/: preprocess_synthea_data.py
