[project]
name = "rgl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "fastparquet>=2024.11.0",
    "google>=3.0.0",
    "google-generativeai>=0.8.4",
    "medspacy>=1.3.1",
    "ogb>=1.3.6",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "patool>=4.0.0",
    "pcst-fast>=1.0.10",
    "pyarrow>=19.0.1",
    "pybind11>=2.13.6",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
]
